--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en" class="o-hoverable-on core">
 <head>
-  <link rel="stylesheet" href="//origami-build.ft.com/v2/bundles/css?modules=o-grid@^4.2.0,o-colors@^3.3.2,o-typography@^4.1.0"
-  />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<title>o-header: simple-header demo</title>
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
+	<script src="//cdn.polyfill.io/v2/polyfill.min.js?features=customevent,default"></script>
+	<style>body { margin: 0; } .core .o--if-js, .enhanced .o--if-no-js { display: none !important; }</style>
+	<script>(function(d) { d.className = d.className + ' demo-js'; })(document.documentElement);</script>
+	<link rel="stylesheet" href="//origami-build.ft.com/v2/bundles/css?modules=o-header@6.12.0:/demos/src/main.scss,o-fonts@^2.0.0">
+  <link rel="stylesheet" href="//origami-build.ft.com/v2/bundles/css?modules=o-grid@^4.2.0,o-colors@^3.3.2,o-typography@^4.1.0">
 
-  <style>
+    <style>
     /* Hide any enhanced experience content when in core mode, and vice versa. */
     
     .core .o--if-js,
@@ -26,8 +33,33 @@
     }
   </style>
 </head>
-
 <body>
+<header class="o-header o-header--simple" data-o-component="o-header" data-o-header--no-js="">
+	<div class="o-header__row o-header__top">
+		<div class="o-header__container">
+			<div class="o-header__top-wrapper">
+
+				<div class="o-header__top-column o-header__top-column--left"></div>
+
+				<div class="o-header__top-column o-header__top-column--center">
+					<!--<div class="o-header__top-takeover"></div>-->
+					<a class="o-header__top-logo" href="//origami-build.ft.com/" title="Go to Financial Times homepage">
+						<span class="o-header__visually-hidden">Financial Times</span>
+					</a>
+				</div>
+
+				<div class="o-header__top-column o-header__top-column--right">
+					<!--<div class="o-header__top-takeover"></div>-->
+					<a class="o-header__top-link o-header__top-link--myft" href="/myft">
+						<span class="o-header__visually-hidden">myFT</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</header>
+
   <div class="o-colors-body-text o-grid-container">
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
@@ -37,7 +69,9 @@
       </div>
     </div>
   </div>
-  <script src="//origami-build.ft.com/v2/bundles/js?modules=o-grid@^4.2.0,o-tracking@^1.1.8"></script>
-</body>
 
+<script src="//origami-build.ft.com/v2/bundles/js?modules=o-header@6.12.0:/demos/src/main.js,o-fonts@^2.0.0"></script>
+<script src="//registry.origami.ft.com/embedapi?autoload=resize"></script>
+<script src="//origami-build.ft.com/v2/bundles/js?modules=o-grid@^4.2.0"></script>
+</body>
 </html>
