--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,14 @@
 
 				<div class="o-header__top-column o-header__top-column--center">
 					<!--<div class="o-header__top-takeover"></div>-->
-					<a class="o-header__top-logo" href="//origami-build.ft.com/" title="Go to Financial Times homepage">
+					<a class="o-header__top-logo" href="//www.ft.com" title="Go to Financial Times homepage">
 						<span class="o-header__visually-hidden">Financial Times</span>
 					</a>
 				</div>
 
 				<div class="o-header__top-column o-header__top-column--right">
 					<!--<div class="o-header__top-takeover"></div>-->
-					<a class="o-header__top-link o-header__top-link--myft" href="/myft">
+					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft">
 						<span class="o-header__visually-hidden">myFT</span>
 					</a>
 				</div>
