--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>o-header: simple-header demo</title>
+	<title>ou have been successfully unsubscribed</title>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<script src="//cdn.polyfill.io/v2/polyfill.min.js?features=customevent,default"></script>
 	<style>body { margin: 0; } .core .o--if-js, .enhanced .o--if-no-js { display: none !important; }</style>
