update linkf or myft alerts

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
 				<div class="o-header__top-column o-header__top-column--right">
 					<!--<div class="o-header__top-takeover"></div>-->
-					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft">
+					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft/alerts">
 						<span class="o-header__visually-hidden">myFT</span>
 					</a>
 				</div>
