--- a/public/account.html
+++ b/public/account.html
@@ -50,7 +50,7 @@
 
 				<div class="o-header__top-column o-header__top-column--right">
 					<!--<div class="o-header__top-takeover"></div>-->
-					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft">
+					<a class="o-header__top-link o-header__top-link--myft" href="//www.ft.com/myft/alerts">
 						<span class="o-header__visually-hidden">myFT</span>
 					</a>
 				</div>
@@ -63,10 +63,10 @@
   <div class="o-colors-body-text o-grid-container">
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
-        <p class="o-typography-subhead">You are now unsubscribed from <strong>Account</strong> emails</p>
+        <p class="o-typography-subhead">You are now unsubscribed from <strong>Product announcement emails</strong> emails</p>
         <p class="o-typography-body">Our account emails are here to help you get the most out of the FT.</p>
         <p class="o-typography-body">If you unsubscribed by mistake, please contact <a href="mailto:help@ft.com" data-tracking="feedback">help@ft.com</a>.</p>
-        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/">go to myFT</a>.</p>        
+        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/alerts">go to myFT</a>.</p>        
       </div>
     </div>
   </div>
