--- a/public/account.html
+++ b/public/account.html
@@ -63,7 +63,7 @@
   <div class="o-colors-body-text o-grid-container">
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
-        <p class="o-typography-subhead">You are now unsubscribed from <strong>Product announcement emails</strong> emails</p>
+        <p class="o-typography-subhead">You are now unsubscribed from <strong>Product announcement</strong> emails</p>
         <p class="o-typography-body">Our account emails are here to help you get the most out of the FT.</p>
         <p class="o-typography-body">If you unsubscribed by mistake, please contact <a href="mailto:help@ft.com" data-tracking="feedback">help@ft.com</a>.</p>
         <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/alerts">go to myFT</a>.</p>        
