--- a/public/marketing.html
+++ b/public/marketing.html
@@ -63,10 +63,10 @@
   <div class="o-colors-body-text o-grid-container">
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
-        <p class="o-typography-subhead">You are now unsubscribed from <strong>Marketing</strong> emails</p>
-        <p class="o-typography-body">You will no longer be contacted with promotional offers.</p>
-        <p class="o-typography-body">If you unsubscribed by mistake, please contact <a href="mailto:help@ft.com" data-tracking="feedback">help@ft.com</a>.</p>
-        <p class="o-typography-body">You may be subscribed to other emails from us, to manage your email preferences, <a href="//www.ft.com/myft/alerts">go to myFT</a>.</p>        
+        <p class="o-typography-subhead">You are now unsubscribed from <strong>Invites & offers</strong> emails</p>.
+        <p class="o-typography-body">You may be subscribed to other emails from the FT.</p>
+        <p class="o-typography-body">Manage the emails you receive in <a href="//www.ft.com/myft/alerts">Contact preferences</a>.</p>
+        <p class="o-typography-body">In most cases unsubscribe will happen immediately. However, please allow up to 72 hours for changes to take effect.</p>        
       </div>
     </div>
   </div>
