Actually removing the full stop
Somehow missed it last time :(

--- a/public/top-stories-and-features.html
+++ b/public/top-stories-and-features.html
@@ -64,7 +64,7 @@
     <div class="o-grid-row">
       <div data-o-grid-colspan="Mone-half center" class="box">
         <div class=""></div>
-        <p class="o-typography-subhead">You are now unsubscribed from <strong>Top stories &amp; features</strong> emails.</p>
+        <p class="o-typography-subhead">You are now unsubscribed from <strong>Top stories &amp; features</strong> emails</p>
         <p class="o-typography-body">You may be subscribed to other emails from the FT.</p>
         <p class="o-typography-body">Manage the emails you receive in <a href="https://www.ft.com/myft/alerts">Contact preferences</a>.</p>
         <p class="o-typography-body">In most cases unsubscribe will happen immediately. However, please allow up to 72 hours for changes to take effect.</p>        
